mintmenu (5.0.6) julia; urgency=low

  * Removed sidepane (confusing), plugins are now enabled/disabled in preferences  
  * UI improvements (dotted separators, layout)
  
 -- Clement Lefebvre <root@linuxmint.com>  Mon,  13 Sep 2010 12:09:00 +0000

mintmenu (5.0.5) julia; urgency=low

  * Multi-threaded search
  * Multiple keywords search
  * Fixed grab focus bugs
  
 -- Clement Lefebvre <root@linuxmint.com>  Sun,  12 Sep 2010 12:21:00 +0000

mintmenu (5.0.4) julia; urgency=low

  * Don't break menu if apt fails to initialize
  
 -- Clement Lefebvre <root@linuxmint.com>  Fri,  10 Sep 2010 13:34:00 +0000

mintmenu (5.0.3) julia; urgency=low

  * Fixed separators colors in search results
  
 -- Clement Lefebvre <root@linuxmint.com>  Fri,  10 Sep 2010 10:41:00 +0000

mintmenu (5.0.2) julia; urgency=low

  * Fixed space chars in computer search
  * Fixed focus problems with search entry and search menu

 -- Clement Lefebvre <root@linuxmint.com>  Tue,  07 Sep 2010 18:28:00 +0000

mintmenu (5.0.1) julia; urgency=low

  * Added search engines to mintMenu

 -- Clement Lefebvre <root@linuxmint.com>  Mon,  06 Sep 2010 21:55:00 +0000

mintmenu (5.0.0) julia; urgency=low

  * Filtering now uses APT to fetch results and apturl to install packages

 -- Clement Lefebvre <root@linuxmint.com>  Mon,  06 Sep 2010 15:21:00 +0000

mintmenu (4.9.9) isadora; urgency=low

  * Custom places: now understands ~ signs and listens to changes in the path

 -- Clement Lefebvre <root@linuxmint.com>  Sun,  09 May 2010 11:51:00 +0000

mintmenu (4.9.8) isadora; urgency=low

  * Removed suggestion "search in portal"

 -- Clement Lefebvre <root@linuxmint.com>  Sat,  01 May 2010 13:07:00 +0000

mintmenu (4.9.7) isadora; urgency=low

  * Imported fixes from icius on editing favorites

 -- Clement Lefebvre <root@linuxmint.com>  Tue,  27 Apr 2010 08:37:00 +0000

mintmenu (4.9.6) isadora; urgency=low

  * Fixed drag and drop from favorites
