@@ -3,10 +3,11 @@
 import sys, os
 
 if len(sys.argv) > 1:
-	if (sys.argv[1] == "clean"):
-		print "All mintMenu settings are now restored to default"
-		os.system("gconftool-2 --recursive-unset /apps/mintMenu")
-		os.system("rm -rf ~/.linuxmint/mintMenu")
+    if (sys.argv[1] in ["clean", "clear", "reset", "--clean", "--clear", "--reset"]):
+        os.system("gconftool-2 --recursive-unset /apps/mintMenu")
+        os.system("rm -rf ~/.linuxmint/mintMenu")
+        os.system("gconftool-2 --recursive-unset /apps/mintMenu")
+        os.system("rm -rf ~/.linuxmint/mintMenu")
+        print "All mintMenu settings are now restored to default"
 else:
-	os.system("/usr/lib/linuxmint/mintMenu/mintMenu.py run-in-window")
-
+    os.system("/usr/lib/linuxmint/mintMenu/mintMenu.py run-in-window")
